--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
       type="image/svg+xml"
       href="./logo/png/ig-high-resolution-logo-transparent.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ImageGlobe</title>
   </head>
