--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
